Added uploading artifact to maven central

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 plugins {
   id 'java'
   id 'maven-publish'
+  id 'signing'
+  id 'maven'
 }
 
 group = "com.gravityrd"
@@ -16,6 +18,7 @@ repositories {
         jcenter() 
         mavenCentral()
 }
+
 dependencies {
    compile 'com.fasterxml.jackson.core:jackson-databind:2.6.0'
 }
@@ -24,17 +27,83 @@ project.task('sourceJar', group: 'gravity', type: Jar) {
     from project.sourceSets.main.allSource
 }
 
-publishing {
+task javadocJar(type: Jar) {
+    classifier = 'javadoc'
+    from javadoc
+}
+
+artifacts {
+    archives javadocJar, sourceJar
+}
+
+signing {
+    sign configurations.archives
+}
+
+/*publishing {
     publications {
         mavenJava(MavenPublication) {
             from project.components.java
-            artifact project.sourceJar {
+            artifact project.sourceJar {q
                 classifier "webshop-data"
             }
         }
     }
-}
+    repositories {
+        maven {
+            url "https://oss.sonatype.org/content/repositories/snapshots"
+        }
+    }
+}*/
 
 task wrapper(type: Wrapper) {
     distributionUrl = "http://services.gradle.org/distributions/gradle-2.5-all.zip"
+}
+
+uploadArchives {
+  repositories {
+    mavenDeployer{
+      beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+      repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+        authentication(userName: ossrhUsername, password: ossrhPassword)
+      }
+
+      snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+        authentication(userName: ossrhUsername, password: ossrhPassword)
+      }
+
+      
+
+      pom.project {
+       
+        name 'JSONDTO'
+        packaging 'jar'
+        // optionally artifactId can be defined here 
+        description 'Jsondto for gravity java client.'
+        url 'https://gravityrd.com'
+
+        scm {
+          connection 'https://github.com/gravityrd/jsondto'
+          developerConnection 'git@github.com:gravityrd/jsondto.git'
+          url 'https://github.com/gravityrd/jsondto.git'
+        }
+
+        licenses {
+          license {
+            name 'The Apache License, Version 2.0'
+            url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+          }
+        }
+
+        developers {
+          developer {
+            id 'gravityrd'
+            name 'Gravity R&D'
+            email 'bence.sipos@sgravityrd.com'
+          }
+        }
+      }
+    }
+  }
 }
