Fixes, some mistakes in Java doc, plus some publishing fixups

--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,7 @@
 plugins {
-  id 'java'
-  id 'maven-publish'
-  id 'signing'
-  id 'maven'
+    id 'java'
+    id 'signing'
+    id 'maven'
 }
 
 group = "com.gravityrd"
@@ -14,17 +13,25 @@ sourceCompatibility = 1.7
 targetCompatibility = 1.7
 tasks.withType(JavaCompile) { options.incremental = true }
 
-repositories { 
-        jcenter() 
-        mavenCentral()
+task wrapper(type: Wrapper) {
+    distributionUrl = "http://services.gradle.org/distributions/gradle-2.5-all.zip"
+}
+
+repositories {
+    maven {
+        url "https://oss.sonatype.org/content/groups/public"
+    }
+    mavenCentral()
+    jcenter()
 }
 
 dependencies {
-   compile 'com.fasterxml.jackson.core:jackson-databind:2.6.0'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.6.0'
 }
 
-project.task('sourceJar', group: 'gravity', type: Jar) {
-    from project.sourceSets.main.allSource
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
 }
 
 task javadocJar(type: Jar) {
@@ -33,77 +40,55 @@ task javadocJar(type: Jar) {
 }
 
 artifacts {
-    archives javadocJar, sourceJar
+    archives javadocJar, sourcesJar, jar
 }
 
 signing {
     sign configurations.archives
 }
 
-/*publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            from project.components.java
-            artifact project.sourceJar {q
-                classifier "webshop-data"
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                authentication(userName: ossrhUsername, password: ossrhPassword)
+            }
+
+            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+                authentication(userName: ossrhUsername, password: ossrhPassword)
+            }
+
+            pom.project {
+
+                name 'jsondto'
+                packaging 'jar'
+                // optionally artifactId can be defined here
+                description 'JSON data access objects for gravity java client.'
+                url 'https://gravityrd.com'
+
+                scm {
+                    connection 'https://github.com/gravityrd/jsondto'
+                    developerConnection 'git@github.com:gravityrd/jsondto.git'
+                    url 'https://github.com/gravityrd/jsondto.git'
+                }
+
+                licenses {
+                    license {
+                        name 'GNU General Public License, version 2'
+                        url 'https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id 'gravityrd'
+                        name 'Gravity R&D'
+                        email 'bence.sipos@sgravityrd.com'
+                    }
+                }
             }
         }
     }
-    repositories {
-        maven {
-            url "https://oss.sonatype.org/content/repositories/snapshots"
-        }
-    }
-}*/
-
-task wrapper(type: Wrapper) {
-    distributionUrl = "http://services.gradle.org/distributions/gradle-2.5-all.zip"
-}
-
-uploadArchives {
-  repositories {
-    mavenDeployer{
-      beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-
-      repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-        authentication(userName: ossrhUsername, password: ossrhPassword)
-      }
-
-      snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
-        authentication(userName: ossrhUsername, password: ossrhPassword)
-      }
-
-      
-
-      pom.project {
-       
-        name 'JSONDTO'
-        packaging 'jar'
-        // optionally artifactId can be defined here 
-        description 'Jsondto for gravity java client.'
-        url 'https://gravityrd.com'
-
-        scm {
-          connection 'https://github.com/gravityrd/jsondto'
-          developerConnection 'git@github.com:gravityrd/jsondto.git'
-          url 'https://github.com/gravityrd/jsondto.git'
-        }
-
-        licenses {
-          license {
-            name 'The Apache License, Version 2.0'
-            url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-          }
-        }
-
-        developers {
-          developer {
-            id 'gravityrd'
-            name 'Gravity R&D'
-            email 'bence.sipos@sgravityrd.com'
-          }
-        }
-      }
-    }
-  }
 }
